# semibot

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  2026-02-04-command-messageagent-md-refactorcommand-messag.txt  CLAUDE.md  README.md  TEST_SUMMARY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.xlsx  test_chat.sh  tsconfig.json  tsconfig.tsbuildinfo
runtime/: =3.1.0  README.md  main.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
runtime/.semibot/sessions/: event-engine.db
runtime/config/: skills.yaml
runtime/docs/: api-reference.md  architecture.md  deployment-guide.md  implementation-progress.md  phase-d-summary.md  phase-e-summary.md  troubleshooting.md
runtime/docs/examples/: 01_basic_usage.py  02_capability_graph.py  03_unified_executor.py  04_audit_logging.py  05_approval_hook.py  07_complete_workflow.py  README.md
runtime/openclaw-bridge/: PROTOCOL.md  package.json
runtime/openclaw-bridge/scripts/: openclaw-sdk-runner.mjs
runtime/openclaw-bridge/src/: bridge.ts  event-translator.ts  main.ts  openclaw-runner.ts  protocol.ts  sdk-provider.ts  skill-loader.ts
runtime/openclaw-bridge/tests/: bridge-e2e.mjs  bridge-sdk-artifact-fallback-e2e.mjs  bridge-sdk-e2e.mjs  bridge-sdk-fail-e2e.mjs  bridge-sdk-invalid-output-e2e.mjs  bridge-sdk-timeout-e2e.mjs
runtime/scripts/: feishu_longconn_bridge.mjs  feishu_sdk_e2e.py  feishu_sdk_send.mjs  gateway_outbound_files_test.py  install.sh  install_and_start.sh  migrate_pg_agents_to_sqlite.py  migrate_pg_config_to_sqlite.py  run_v2_ci_local.sh  semibot  telegram_attachment_e2e.py  telegram_gateway_smoke.py
runtime/semibot/: __init__.py  __main__.py
runtime/src/: __init__.py  bootstrap.py  cli.py  execution_plane.py  local_runtime.py  main.py  runtime_service.py
runtime/src/agents/: __init__.py  base.py  delegator.py  executor.py  planner.py
runtime/src/audit/: __init__.py  logger.py  models.py  storage.py
runtime/src/checkpoint/: local_checkpointer.py
runtime/src/constants/: __init__.py  config.py
runtime/src/events/: __init__.py  approval_manager.py  attention_budget.py  event_bus.py  event_engine.py  event_router.py  event_store.py  models.py  orchestrator_bridge.py  replay_manager.py  rule_evaluator.py  rule_loader.py  rules_engine.py  (+3 more)
runtime/tests/: README.md  __init__.py  test_bootstrap.py  test_cli.py  test_local_runtime 2.py  test_local_runtime.py  test_main_entry.py  test_main_entrypoint.py
(+1313 files in other folders)
